--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1 class="title container">#コンパス戦闘摂理解析システム</h1>
       <div class="header">
-        <img class="logo" src="logo.png">
+        <img class="logo" src="logo.jpg">
         <div class="menu btn">
           <a href="#" class="btn chara">キャラクター</a>
           <a href="#" class="btn card">カード</a>
@@ -22,7 +22,7 @@
     <div class="main">
       <div class="flex">
         <div class="mainicon">
-          <img class="icon" src="red_cl.png">
+          <img class="icon" src="red_cl.jpg">
           <p>3分で決まる!<br>
             スピーディアクション!</p>
 
@@ -34,7 +34,7 @@
       </div>
       <div class="flex">
         <div class="mainicon">
-          <img class="icon" src="blue_cl.png">
+          <img class="icon" src="blue_cl.jpg">
           <p>豪華クリエイター<br>
             ＆<br>
             人気声優がヒーローボイスと担当
@@ -47,7 +47,7 @@
       </div>
       <div class="flex">
         <div class="mainicon">
-          <img class="icon" src="sora_cl.png">
+          <img class="icon" src="sora_cl.jpg">
           <p>バトルSNSの頂点を目指せ‼</p>
         </div>
         <ul class="message container">
