--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
           </a>
           <div class="app">
             <ul class="app_info1">
-              <li>販売元</li>
-              <li>カテゴリ</li>
-              <li>コピーライト</li>
+              <li style="text-decoration:underline">販売元</li>
+              <li style="text-decoration:underline">カテゴリ</li>
+              <li style="text-decoration:underline">コピーライト</li>
             </ul>
             <ul class="app_info2">
               <li>NHN PlAYART CORP</li>
