--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main">
       <div class="flex">
         <div class="mainicon">
-          <img class="icon" src="red_cl.jpg">
+          <img class="icon" src="red_cl2.jpg">
           <p>3分で決まる!<br>
             スピーディアクション!</p>
 
@@ -34,7 +34,7 @@
       </div>
       <div class="flex">
         <div class="mainicon">
-          <img class="icon" src="blue_cl.jpg">
+          <img class="icon" src="blue_cl2.jpg">
           <p>豪華クリエイター<br>
             ＆<br>
             人気声優がヒーローボイスと担当
@@ -47,7 +47,7 @@
       </div>
       <div class="flex">
         <div class="mainicon">
-          <img class="icon" src="sora_cl.jpg">
+          <img class="icon" src="sora_cl2.jpg">
           <p>バトルSNSの頂点を目指せ‼</p>
         </div>
         <ul class="message container">
