--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
         </ul>
       </div>
     </div>
+      <div class="midasi">
+          <h1>-公式情報-</h1>
+      </div>
     <div class="flex_web">
       <div class="youtube">
         <a href="https://www.youtube.com/channel/UCvEYHPhKDyYUTCOKFJhnnJQ/playlists" class="btn youtube">
           <span class="fa fa-youtube"></span>
           YouTube
         </a>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSZ9gA5Ha-0353WKBVjfpGcJSLdtyrTCs"
+        <iframe class="ytb_prebu" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSZ9gA5Ha-0353WKBVjfpGcJSLdtyrTCs"
           frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <p>【FF14コラボ中‼】</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/l88yaTZXdgQ"
